--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -DCMAKE_BUILD_TYPE=Coverage ..
+        cmake -DCMAKE_BUILD_TYPE=Coverage ../banking
 
     - name: Build
       run: |
