--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Generate coverage report
       run: |
         cd build
-        lcov --capture --directory . --output-file coverage.info --ignore-errors inconsistent,unsupported,format,gcov,unused
+        lcov --capture --directory . --output-file coverage.info --ignore-errors mismatch,unsupported,format,gcov,unused
         lcov --extract coverage.info "*/banking/*" --output-file coverage.info
         lcov --list coverage.info
 
