--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,12 @@ jobs:
         lcov --list coverage.info
 
     - name: Upload coverage to Coveralls
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: banking/build/coverage.info
+
+    - name: Upload coverage to Coveralls
       uses: coverallsapp/github-action@v2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
